@startuml

title __LINNIK_LR52's Class Diagram__\n

  namespace Trees {
    class Trees.Demo {
    }
  }
  

  namespace Trees {
    class Trees.Forest {
    }
  }
  

  namespace Trees {
    class Trees.Tree {
    }
  }
  

  namespace Trees {
    class Trees.TreeFactory {
    }
  }
  

  namespace Trees {
    class Trees.TreeType {
    }
  }
  

  Trees.Forest -up-|> javax.swing.JFrame
  Trees.Tree o-- Trees.TreeType : type


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
